--- a/css/style.css
+++ b/css/style.css
@@ -1012,7 +1012,7 @@ i.fas.fa-sort-up {
 
 /* Button used to open the chat form - fixed at the bottom of the page */
 .open-button {
-  background-color: #17539e;
+  background-color: #0069ff;
   color: white;
   padding: 16px 20px;
   border: none;
